# beacon-gateway

./: .dockerignore  .env.local.template  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Tiltfile  libstdin.rlib  package.json
.changeset/: agent-core-consolidation.md  bm25-search-bundled-skills.md  config.json  initial-release.md  mcp-client-foundation.md  mcp-plugin-transport-browser-tools.md  setup-wizard-expansion.md
.github/workflows/: release.yml  test.yml
misc/packaging/aur/omnidotdev-beacon-gateway/: PKGBUILD
misc/packaging/aur/omnidotdev-beacon-gateway-bin/: PKGBUILD
personas/: microcap.json  orin.json
scripts/: publish-persona.sh
skills/concise/: SKILL.md
src/: config.rs  daemon.rs  error.rs  knowledge.rs  lib.rs  lifecycle.rs  main.rs  persona.rs  prompt.rs  setup.rs
src/agent/: mod.rs  runner.rs
src/api/: admin.rs  auth.rs  browser.rs  canvas.rs  feedback.rs  health.rs  jwt.rs  knowledge.rs  life_json.rs  mod.rs  nodes.rs  pairing.rs  personas.rs  plugins.rs  providers.rs  rate_limit.rs  skills.rs  voice.rs  websocket.rs
src/api/webhooks/: google_chat.rs  mod.rs  teams.rs  telegram.rs  vortex.rs
src/api/webhooks/telegram/: media.rs  mod.rs  process.rs  types.rs
src/attachments/: mod.rs  vision.rs
src/billing/: middleware.rs  mod.rs
src/canvas/: mod.rs
src/channels/: discord.rs  google_chat.rs  imessage.rs  matrix.rs  mod.rs  signal.rs  slack.rs  teams.rs  telegram.rs  telegram_html.rs  whatsapp.rs
src/channels/telegram/: api.rs  chunking.rs  dedup.rs  html.rs  mod.rs  polling.rs  rate_limiter.rs  retry.rs  types.rs
src/config/: file.rs  mod.rs  synapse_bridge.rs
src/context/: builder.rs  compaction.rs  life_json.rs  life_json_sync.rs  mod.rs
src/db/: bm25.rs  embedder.rs  indexer.rs  knowledge.rs  memory.rs  mod.rs  persona.rs  schema.rs  session.rs  skill.rs  telegram.rs  user.rs
src/discovery/: mdns.rs  mod.rs
src/events/: mod.rs
src/extensions/: mod.rs
src/hooks/: auto_reply.rs  executor.rs  loader.rs  mod.rs  types.rs
src/integrations/: mod.rs  trellis.rs  vortex.rs
src/knowledge/: mod.rs  resolver.rs  selection.rs
src/links/: config.rs  detector.rs  mod.rs
src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src/media/: config.rs  mod.rs
src/media/providers/: mod.rs  openai.rs  whisper.rs
src/nodes/: mod.rs  policy.rs  registry.rs  types.rs
src/plugins/: discovery.rs  loader.rs  manifest.rs  mod.rs
src/providers/: local_store.rs  mod.rs  provisioner.rs  resolver.rs
src/relay/: mod.rs
src/security/: auth.rs  device.rs  identity.rs  mod.rs  pairing.rs
src/skills/: install.rs  manifold.rs  mod.rs  types.rs
src/sync/: client.rs  merge.rs  mod.rs
src/tools/: browser.rs  browser_tools.rs  cron.rs  exec.rs  executor.rs  loop_detection.rs  memory.rs  mod.rs  policy.rs  sessions.rs
src/tools/web/: fetch.rs  mod.rs  readability.rs  search.rs
src/voice/: capture.rs  mod.rs  playback.rs  stt.rs  tts.rs  wake_word.rs
tests/: api.rs  channel.rs  voice.rs
tests/common/: mod.rs
